when page css draft

--- a/index.css
+++ b/index.css
@@ -50,7 +50,7 @@ body, html {
 input[type=text] {
     border: 2px solid #9ACD32;
     border-radius: 4px;
-    background-color:#DCDCDC ;
+    background-color:#DCDCDC;
   }
 input[type=button]{
     background-color: #9ACD32;
@@ -83,3 +83,105 @@ input[type=button]{
     text-align: left;
   
 }
+/*when page*/
+#when{
+    background-color: #DCDCDC;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+    
+  }
+  .main-timeline-section{
+    position: relative; 
+    width: 100%;  
+    margin:auto; 
+    height:300px;
+  }
+  .main-timeline-section .timeline-start,
+  .main-timeline-section .timeline-end{
+    position: absolute;
+    background:#9ACD32;
+    border-radius:100px;
+    top:50%;
+    transform: translateY(-50%);
+    width:30px;
+    height:30px;
+  }
+  .main-timeline-section .timeline-end{
+    right:0px;
+  }
+  .main-timeline-section .conference-center-line{
+    position: absolute;
+    width:100%;
+    height:5px;
+    top:50%;
+    transform: translateY(-50%);
+    background:#9ACD32;
+  }
+  .timeline-article{
+      width: 9%;
+      position: relative;
+      min-height: 300px;
+      float:right;
+  }
+  .timeline-article .content-date{
+      position: absolute;
+      top: 35%;
+      left: -30px; 
+      font-size:18px;
+  }
+  .timeline-article .meta-date{
+      position: absolute;
+      top: 50%;
+      left: 0px;
+      transform: translateY(-50%); 
+      width:20px;
+      height:20px;
+      border-radius: 100%;
+      background:#fff;
+      border:1px solid #9ACD32;
+  }
+  .timeline-article .content-box{
+    box-shadow: 2px 2px 4px 0px #c1c1c1;
+    border:1px solid #9ACD32;
+    border-radius: 5px;
+    background-color: #fff;
+    width: 120px;
+    position: absolute;
+    top: 60%;
+    left: -50px; 
+    padding:10px;
+  }
+  .timeline-article-top .content-box:before{
+    content: " ";
+    position:absolute; 
+    left:50%;
+    transform: translateX(-50%);
+    top:-20px;
+    border:10px solid transparent;
+    border-bottom-color: #9ACD32;
+  }
+  .timeline-article-bottom .content-date{
+    top: 59%;
+  }
+  .timeline-article-bottom .content-box{
+    top: 0%;
+  }
+  .timeline-article-bottom .content-box:before{
+    content: " ";
+    position:absolute; 
+    left:50%;
+    transform: translateX(-50%);
+    bottom:-20px;
+    border:10px solid transparent;
+    border-top-color:#9ACD32;
+  }
+  
+  
+  @media (max-width:460px){
+    body{
+      display: none;
+    }
+  }
