--- a/index.css
+++ b/index.css
@@ -1,25 +1,39 @@
 
 body, html {
   height: 100%;
-  width:100%
-  margin : 0;
+  margin: 0;
 }
-
+/*change navbar color*/
+.bg-light{
+  background-color: white;
+} 
 
 /*navbar*/
 .navbar-nav{
   margin-left: auto;
-  font-size: 1rem;
+  
   
 }
-.nav-link{color:#6B8E23;
+.navbar-dark .navbar-nav .nav-link{
+  color:#6B8E23;
+}
+.nav-item{color:#6B8E23;
+          padding-left: 50px;
   
+}
+.active{
+  color:black!important;
+}
+
+.navbar-center {
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
 }
 /* home page */
 #home{background-color:white;
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   
 }
@@ -27,25 +41,30 @@ body, html {
 /*home-title column*/
 #title{
   text-align: left;
-  padding-top: 90px;
+  padding-top: 11vh;
   color: #6B8E23;
   background-color: #FFDAB9;
-  padding-bottom: 90px;
+  padding-bottom: 39vh;
+  
 }
 
 /*home-search-descrip column*/
 #search-description{
       text-align: left;
-      padding-top: 100px;
+      padding-top: 22vh;
       color: #FFDAB9;  
       background-color: #6B8E23;
+      padding-bottom: 28vh;
+      
 }
 /*home-search-info column*/
 #search-info{
   text-align: left;
-  padding-top: 80px;
-  padding-left: 50px;;
-  color: #6B8E23;    
+  padding-top: 18vh;
+  padding-left: 3vw;;
+  color: #6B8E23;  
+  padding-bottom:18vh; 
+ 
 }
 
 /*search column */
@@ -69,21 +88,21 @@ input[type=button]{
   
 }
 #trivia{
-  padding-top: 10px;
+  padding-top: 2vw;
   color:#6B8E23;
   text-align: left;
   background-color: #FFDAB9;
  
 }
 #yearC{
-  padding-top: 10px;
+  padding-top: 2vw;
   color:#6B8E23;
   text-align: left;
   background-color: #FFDAB9;
 
 }
 #yearBc{
-  padding-top: 10px;
+  padding-top: 2vw;
   color:#6B8E23;
   text-align: left;
   background-color: #FFDAB9;
@@ -92,9 +111,8 @@ input[type=button]{
 /*timeline page*/
 #timeline{
   background-color: #6B8E23;
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   
 }
@@ -102,7 +120,7 @@ input[type=button]{
   position: relative; 
   width: 100%;  
   margin:auto; 
-  height: 300px;
+  height: 50vh;
 }
 
 .main-timeline-section .timeline-start,
@@ -110,10 +128,10 @@ input[type=button]{
   position: absolute;
   background:#FFDAB9;
   border-radius:100px;
-  top:55%;
+  top:50vh;
   transform: translateY(-50%);
-  width:30px;
-  height:30px;
+  width:3vw;
+  height:5vh;
 }
 
 .main-timeline-section .timeline-end{
@@ -124,7 +142,7 @@ input[type=button]{
   position: absolute;
   width:100%;
   height:5px;
-  top:55%;
+  top:50vh;
   transform: translateY(-50%);
   background:#FFDAB9;
 }
@@ -132,25 +150,25 @@ input[type=button]{
 .timeline-article{
     width: 11%;
     position: relative;
-    min-height: 300px;
+    min-height: 88vh;
     float:right;
 }
 
 .timeline-article .content-date{
     position: absolute;
-    top: 58%;
-    left: -30px; 
-    font-size:18px;
+    top: 55vh;
+    left: -1vw; 
+    font-size:0.8vw;
     color:#FFDAB9;
 }
 
 .timeline-article .meta-date{
     position: absolute;
-    top:55%;
+    top:50vh;
     left: 0px;
     transform: translateY(-50%); 
-    width:20px;
-    height:20px;
+    width:2vw;
+    height:5vh;
     border-radius: 100%;
     background:#FFDAB9;
     border:1px solid #FFDAB9;
@@ -161,58 +179,53 @@ input[type=button]{
   border:1px solid #FFDAB9;
   border-radius: 5px;
   background-color:#FFDAB9;
-  height:100px;
-  width: 150px;
+  height:22vh;
+  width: 9vw;
   position: absolute;
-  top: 73%;
-  left: -65px; 
-  padding:8px;
-  font-size: 0.8em;
+  top: 63vh;
+  left: -3.5vw; 
+  padding:.8vw;
+  font-size: 0.75vw;
   
 }
 
 .timeline-article-top .content-box:before{
   content: " ";
   position:absolute; 
-  left:50%;
+  left:4.5vw;
   transform: translateX(-50%);
-  top:-20px;
+  top:-1.4vw;
   border:10px solid transparent;
   border-bottom-color: #FFDAB9;
 }
 
 .timeline-article-bottom .content-date{
-  top: 38%;
+  top: 42vh;
   color:#FFDAB9;
 }
 
 .timeline-article-bottom .content-box{
-  top: 3%;
+  top:15vh;
 }
 
 .timeline-article-bottom .content-box:before{
   content: " ";
   position:absolute; 
-  left:50%;
+  left:4.5vw;
   transform: translateX(-50%);
-  bottom:-20px;
+  bottom:-5vh;
   border:10px solid transparent;
   border-top-color:#FFDAB9;
 }
 
 
-@media (max-width:460px){
-  body{
-    display: none;
-  }
-}
+
 
 /*math page*/
 #maths{
 background-color: white;
-background-position: center center;
+background-position: center;
 background-repeat: no-repeat;
-background-attachment: fixed;
 background-size: cover;
 
 }
@@ -255,7 +268,7 @@ backface-visibility: hidden;
 .flip-card-front {
 background-color:#FFDAB9;
 color:#6B8E23 ;
-font-size: 0.5rem;
+font-size: 0.75vw;
 }
 
 /* Style the back side */
@@ -263,15 +276,14 @@ font-size: 0.5rem;
 background-color: #6B8E23;
 color: white;
 transform: rotateY(180deg);
-font-size: 0.45rem;
+font-size: 0.75vw;
 }
 
 /*numerology*/
 #numerology{
 background-color: #FFDAB9;
-background-position: center center;
+background-position: center ;
 background-repeat: no-repeat;
-background-attachment: fixed;
 background-size: cover;
 /*border: solid 33px #FFDAB9;*/
 
@@ -313,9 +325,8 @@ div.numberInterp{
 /*game page*/
 #game{
 background-color: #6B8E23;
-background-position: center center;
+background-position: center;
 background-repeat: no-repeat;
-background-attachment: fixed;
 background-size: cover;
 }
 
