--- a/index.css
+++ b/index.css
@@ -116,109 +116,127 @@ input[type=button]{
   background-size: cover;
   
 }
-.main-timeline-section{
-  position: relative; 
-  width: 100%;  
-  margin:auto; 
-  height: 50vh;
+/* The actual timeline (the vertical ruler) */
+.timeline-section {
+  position: relative;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
-.main-timeline-section .timeline-start,
-.main-timeline-section .timeline-end{
+/* The actual timeline (the vertical ruler) */
+.timeline-section::after {
+  content: '';
   position: absolute;
-  background:#FFDAB9;
-  border-radius:100px;
-  top:50vh;
-  transform: translateY(-50%);
-  width:3vw;
-  height:5vh;
-}
-
-.main-timeline-section .timeline-end{
-  right:0px;
-}
-
-.main-timeline-section .conference-center-line{
-  position: absolute;
-  width:100%;
-  height:5px;
-  top:50vh;
-  transform: translateY(-50%);
-  background:#FFDAB9;
-}
-
-.timeline-article{
-    width: 11%;
-    position: relative;
-    min-height: 88vh;
-    float:right;
-}
-
-.timeline-article .content-date{
-    position: absolute;
-    top: 55vh;
-    left: -1vw; 
-    font-size:0.8vw;
-    color:#FFDAB9;
-}
-
-.timeline-article .meta-date{
-    position: absolute;
-    top:50vh;
-    left: 0px;
-    transform: translateY(-50%); 
-    width:2vw;
-    height:5vh;
-    border-radius: 100%;
-    background:#FFDAB9;
-    border:1px solid #FFDAB9;
-}
-
-.timeline-article .content-box{
-  box-shadow: 2px 2px 4px 0p #FFDAB9;
-  border:1px solid #FFDAB9;
-  border-radius: 5px;
+  width: 6px;
   background-color:#FFDAB9;
-  height:22vh;
-  width: 9vw;
-  position: absolute;
-  top: 63vh;
-  left: -3.5vw; 
-  padding:.8vw;
-  font-size: 0.75vw;
+  top: 0;
+  bottom: 0;
+  left: 40vw;
   
 }
 
-.timeline-article-top .content-box:before{
+/* article around content */
+.article {
+  position: relative;
+  background-color: #FFDAB9;
+  border:3px solid #FFDAB9;
+  width: 38vw;
+  padding:0;
+}
+
+/* The circles on the timeline */
+.article::after {
+  content: '';
+  position: absolute;
+  width: 2vw;
+  height: 5vh;
+  right: -3.5vw;
+  background-color: white;
+  border: 4px solid #FFDAB9;
+  top: 2vh;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 43vw;
+}
+
+/* Add arros to the left container (pointing right) */
+.left::before {
   content: " ";
-  position:absolute; 
-  left:4.5vw;
-  transform: translateX(-50%);
-  top:-1.4vw;
-  border:10px solid transparent;
-  border-bottom-color: #FFDAB9;
-}
+  height: 0;
+  position: absolute;
+  top: 3vh;
+  width: 0;
+  z-index: 1;
+  right: -1vw;
+  border: 5px solid #FFDAB9;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
 
-.timeline-article-bottom .content-date{
-  top: 42vh;
-  color:#FFDAB9;
 }
-
-.timeline-article-bottom .content-box{
-  top:15vh;
-}
-
-.timeline-article-bottom .content-box:before{
+/* Add arrows to the right container (pointing left) */
+.right::before {
   content: " ";
-  position:absolute; 
-  left:4.5vw;
-  transform: translateX(-50%);
-  bottom:-5vh;
-  border:10px solid transparent;
-  border-top-color:#FFDAB9;
+  height: 0;
+  position: absolute;
+  top: 3vh;
+  width: 0;
+  z-index: 1;
+  left: -1vw;
+  border : 5px solid #FFDAB9;
+  border-width :  10px 10px 10px 0;
+  border-color : transparent white transparent transparent;
 }
 
+/* the circle for containers on the right side */
+.right::after {
+  left: -4vw;
+}
 
+/* The actual content */
+.content-box {
+  background-color: white;
+  position: relative;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline-section::after {
+  left: -5vw;
+  }
+  
+  /* Full-width containers */
+  .article {
+  width: 100%;
+  }
+  
+  /* all arrows are pointing leftwards */
+  .article::before {
+  left: -4vw;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+  }
+
+  /* all circles are at the same spot */
+  .left::after, .right::after {
+  left: -6vw;
+  }
+  
+  /* all right containers behave like the left ones */
+  .right {
+  left: 0%;
+  }
+}
 
 
 /*math page*/
