change page #href name(mathematic)

--- a/index.css
+++ b/index.css
@@ -236,8 +236,8 @@ input[type=button]{
 }
 
 
-/*math page*/
-#maths{
+/*mathematic page*/
+#mathematic{
 background-color: white;
 background-position: center;
 background-repeat: no-repeat;
